Fix aligning of admin entry buttons

--- a/client/style/admin.less
+++ b/client/style/admin.less
@@ -49,6 +49,10 @@
   }
   .entries {
     margin-top: 20px;
+
+    .entry-controls {
+      min-width: 126px;
+    }
   }
   .filepicker {
     .image {
